<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_wheater"
            android:icon="@drawable/ic_wheater"
            android:title="@string/menu_wheater" />
    </group>
    <item android:title="Culturas">
        <menu>
            <item
                android:id="@+id/nav_milho"
                android:icon="@drawable/ic_milho"
                android:title="@string/menu_gallery" />
            <item
                android:id="@+id/nav_soja"
                android:icon="@drawable/ic_soja"
                android:title="@string/menu_slideshow" />
        </menu>
    </item>
    <item android:title="Administração">
        <menu>
            <item
                android:id="@+id/nav_adm"
                android:icon="@drawable/ic_admin"
                android:title="@string/menu_adm" />
        </menu>
    </item>

</menu>
