<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EEEEEE">

    <Button
        android:id="@+id/button_heterodera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:elevation="4dp"
        android:background="@drawable/button_shape"
        android:textColor="#6F6F6F"
        android:text="@string/heterodera"/>

    <Button
        android:id="@+id/button_meloidogyne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:elevation="4dp"
        android:background="@drawable/button_shape"
        android:textColor="#6F6F6F"
        android:text="@string/meloidogyne" />

    <Button
        android:id="@+id/button_pratylenchus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:elevation="4dp"
        android:background="@drawable/button_shape"
        android:textColor="#6F6F6F"
        android:text="@string/pratylenchus" />
</LinearLayout>